--- a/02-CSS/homework/responsive-web/less/home-page.less
+++ b/02-CSS/homework/responsive-web/less/home-page.less
@@ -1,6 +1,13 @@
 // Conteindo del Home
+@margin-top : 22px;
+ @margin-botton : @margin-top + 3px;
 
 .home {
+  #img-header{
+    border-radius: 10px;
+    margin-top: @margin-top;
+    margin-bottom: @margin-botton;
+  }
 
   .intro {
 
@@ -58,6 +65,12 @@
       }
 
       .btn {
+        padding: 10px;
+        padding-right: 100px;
+        font-size: 20px;
+        font-family: Arial, Helvetica, sans-serif;
+        width: 110px;
+        border-radius: 10px;
       }
     }
 
