--- a/02-CSS/homework/responsive-web/less/index.less
+++ b/02-CSS/homework/responsive-web/less/index.less
@@ -1,1 +1,10 @@
 // Importar los archivos less acá:
+
+@import './variables.less';
+@import './mixins.less';
+@import './reset.less';
+@import './global.less';
+@import './home-page.less';
+@import './navigation.less';
+@import './footer.less';
+
