--- a/02-CSS/homework/responsive-web/less/navigation.less
+++ b/02-CSS/homework/responsive-web/less/navigation.less
@@ -1,1 +1,28 @@
 // Código de Nav acá
+
+@color-titulos: #23293b;
+
+#navbar ul li {
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 30px;
+  text-align: center;
+}
+
+#navbar a {
+  color: @color-titulos;
+  text-decoration: none;
+  padding-left: 25px;
+}
+
+#musica {
+  background-color: #f4f4f4;
+  padding-bottom: 15px;
+  margin-bottom: -10px;
+}
+#musica h2 {
+  text-align: center;
+  padding-top: 25px;
+}
+
+
