--- a/02-CSS/homework/responsive-web/css/index.css
+++ b/02-CSS/homework/responsive-web/css/index.css
@@ -170,8 +170,13 @@ p {
 }
 .home #img-header {
   border-radius: 10px;
-  margin-top: 22px;
-  margin-bottom: 25px;
+  margin-top: 18px;
+  margin-bottom: 21px;
+}
+@media (max-width: 500px) {
+  .home #img-header {
+    width: 100%;
+  }
 }
 .home .intro h2 {
   padding: 15px;
@@ -190,6 +195,17 @@ p {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .music-images .tecnologia,
+  .home .music-images .ondas {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .music-images .auricular {
+    width: 100%;
+  }
+}
 .home .musica-nueva {
   padding: 15px;
 }
@@ -206,8 +222,23 @@ p {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .actual {
+    display: flex;
+    flex-direction: column-reverse;
+    justify: center;
+    align-items: center;
+  }
+}
 .home .actual .actual-text {
   width: 50%;
+  padding: 10px;
+}
+@media (max-width: 500px) {
+  .home .actual .actual-text {
+    width: 100%;
+    margin-top: 2px;
+  }
 }
 .home .actual .actual-text h3 {
   margin-bottom: 10px;
@@ -223,9 +254,20 @@ p {
   width: 110px;
   border-radius: 10px;
 }
+@media (max-width: 500px) {
+  .home .actual .actual-text .btn {
+    width: 100%;
+    text-align: center;
+  }
+}
 .home .actual .actual-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .actual .actual-img {
+    width: 100%;
+  }
 }
 .home .actual .actual-img img {
   width: 100%;
@@ -240,8 +282,10 @@ p {
 }
 @media (max-width: 500px) {
   #navbar ul li {
+    width: 100%;
     font-size: 15px;
-    text-align: center;
+    margin: 0px auto;
+    margin-top: 15px;
   }
 }
 #navbar a {
@@ -253,6 +297,11 @@ p {
   background-color: #f4f4f4;
   padding-bottom: 15px;
   margin-bottom: -10px;
+}
+@media (max-width: 500px) {
+  #musica {
+    width: 100%;
+  }
 }
 #musica h2 {
   text-align: center;
