--- a/02-CSS/homework/responsive-web/less/home-page.less
+++ b/02-CSS/homework/responsive-web/less/home-page.less
@@ -1,24 +1,31 @@
 // Conteindo del Home
-@margin-top : 22px;
- @margin-botton : @margin-top + 3px;
+@margin-top: 18px;
+@margin-botton: @margin-top + 3px;
+.flex(@direction: column-reverse, @justify: center, @align:center) {
+  display: flex;
+  flex-direction: @direction;
+  justify: @justify;
+  align-items: @align;
+}
 
 .home {
-  #img-header{
+  #img-header {
     border-radius: 10px;
     margin-top: @margin-top;
     margin-bottom: @margin-botton;
+    @media @phone {
+      width: 100%;
+    }
   }
 
   .intro {
-
     h2 {
       padding: 15px;
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-
   }
 
   .music-images {
@@ -31,6 +38,18 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+    }
+    .tecnologia,
+    .ondas {
+      @media @phone {
+        display: none;
+      }
+    }
+
+    .auricular {
+      @media @phone {
+        width: 100%;
+      }
     }
   }
 
@@ -53,8 +72,17 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      .flex(column-reverse);
+    }
+
     .actual-text {
       width: 50%;
+      padding: 10px;
+      @media @phone {
+        width: 100%;
+        margin-top: 2px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -71,12 +99,20 @@
         font-family: Arial, Helvetica, sans-serif;
         width: 110px;
         border-radius: 10px;
+        @media @phone {
+          width: 100%;
+          text-align: center;
+          
+        }
       }
     }
 
     .actual-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 100%;
+      }
 
       img {
         width: 100%;
