--- a/02-CSS/homework/responsive-web/less/navigation.less
+++ b/02-CSS/homework/responsive-web/less/navigation.less
@@ -7,6 +7,12 @@
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 30px;
   text-align: center;
+   @media @phone {
+      width: 100%;
+      font-size: 15px;
+      margin: 0px auto;
+      margin-top: 15px;
+    }
 }
 
 #navbar a {
@@ -19,10 +25,11 @@
   background-color: #f4f4f4;
   padding-bottom: 15px;
   margin-bottom: -10px;
+  @media @phone {
+    width: 100%;
+  }
 }
 #musica h2 {
   text-align: center;
   padding-top: 25px;
 }
-
-
