--- a/02-CSS/homework/responsive-web/less/home-page.less
+++ b/02-CSS/homework/responsive-web/less/home-page.less
@@ -102,7 +102,7 @@
         @media @phone {
           width: 100%;
           text-align: center;
-          
+          padding: 16px 24px;
         }
       }
     }
