--- a/02-CSS/homework/responsive-web/css/index.css
+++ b/02-CSS/homework/responsive-web/css/index.css
@@ -258,6 +258,7 @@ p {
   .home .actual .actual-text .btn {
     width: 100%;
     text-align: center;
+    padding: 16px 24px;
   }
 }
 .home .actual .actual-img {
